--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4201,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4214,7 +4214,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4227,7 +4227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4238,7 +4238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -4561,7 +4561,7 @@
        "Wright High School                            <$584  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4575,7 +4575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4593,7 +4593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4607,7 +4607,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4618,7 +4618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -4717,7 +4717,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4736,7 +4736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -4835,7 +4835,7 @@
        "$645-675                                     54  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4857,7 +4857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4868,7 +4868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -5017,7 +5017,7 @@
        "Griffin High School                       $585-629  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5031,7 +5031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5049,7 +5049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -5131,7 +5131,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5150,7 +5150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -5232,7 +5232,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5254,7 +5254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5268,6 +5268,191 @@
     "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
     "\n",
     "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
    ]
   },
   {
