--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,137 +1246,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>37535</th>\n",
-       "      <td>37535</td>\n",
-       "      <td>Norma Mata</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37536</th>\n",
-       "      <td>37536</td>\n",
-       "      <td>Cody Miller</td>\n",
-       "      <td>M</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37541</th>\n",
-       "      <td>37541</td>\n",
-       "      <td>Eric Stevens</td>\n",
-       "      <td>M</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37542</th>\n",
-       "      <td>37542</td>\n",
-       "      <td>Elizabeth Bennett</td>\n",
-       "      <td>F</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37544</th>\n",
-       "      <td>37544</td>\n",
-       "      <td>Jacqueline Harris</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Student ID       student_name gender grade         school_name  \\\n",
-       "37535       37535         Norma Mata      F  10th  Thomas High School   \n",
-       "37536       37536        Cody Miller      M  11th  Thomas High School   \n",
-       "37541       37541       Eric Stevens      M  10th  Thomas High School   \n",
-       "37542       37542  Elizabeth Bennett      F  11th  Thomas High School   \n",
-       "37544       37544  Jacqueline Harris      F  10th  Thomas High School   \n",
-       "\n",
-       "       reading_score  math_score  School ID     type  size   budget  \n",
-       "37535           76.0        76.0         14  Charter  1635  1043130  \n",
-       "37536           84.0        82.0         14  Charter  1635  1043130  \n",
-       "37541           80.0        76.0         14  Charter  1635  1043130  \n",
-       "37542           91.0        94.0         14  Charter  1635  1043130  \n",
-       "37544           71.0        92.0         14  Charter  1635  1043130  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 7. Get all the students passing reading from THS\n",
     "passing_reading_THS = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\")&(school_data_complete_df[\"reading_score\"]>=70)]\n",
@@ -2362,7 +2232,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2530,17 +2402,97 @@
        "      <td>83.8</td>\n",
        "      <td>83.4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>82.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    77.1  77.0  77.5  76.5\n",
-       "Cabrera High School   83.1  83.2  82.8  83.3\n",
-       "Figueroa High School  76.4  76.5  76.9  77.2\n",
-       "Ford High School      77.4  77.7  76.9  76.2\n",
-       "Griffin High School   82.0  84.2  83.8  83.4"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School      nan  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
      "execution_count": 34,
@@ -2553,7 +2505,7 @@
     "math_scores_by_grade.index.name = None\n",
     "\n",
     "# Display the data frame\n",
-    "math_scores_by_grade.head() "
+    "math_scores_by_grade"
    ]
   },
   {
@@ -2624,17 +2576,97 @@
        "      <td>84.3</td>\n",
        "      <td>84.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.1</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.9</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    81.3  80.9  80.9  80.9\n",
-       "Cabrera High School   83.7  84.3  83.8  84.3\n",
-       "Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "Ford High School      80.6  81.3  80.4  80.7\n",
-       "Griffin High School   83.4  83.7  84.3  84.0"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     81.3  80.9  80.9  80.9\n",
+       "Cabrera High School    83.7  84.3  83.8  84.3\n",
+       "Figueroa High School   81.2  81.4  80.6  81.4\n",
+       "Ford High School       80.6  81.3  80.4  80.7\n",
+       "Griffin High School    83.4  83.7  84.3  84.0\n",
+       "Hernandez High School  80.9  80.7  81.4  80.9\n",
+       "Holden High School     83.7  83.3  83.8  84.7\n",
+       "Huang High School      81.3  81.5  81.4  80.3\n",
+       "Johnson High School    81.3  80.8  80.6  81.2\n",
+       "Pena High School       83.8  83.6  84.3  84.6\n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School      nan  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
      "execution_count": 35,
@@ -2657,7 +2689,7 @@
     "reading_scores_by_grade.index.name = None\n",
     "\n",
     "# Display the data frame\n",
-    "reading_scores_by_grade.head() "
+    "reading_scores_by_grade"
    ]
   },
   {
@@ -2669,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2992,7 +3024,7 @@
        "Wright High School                            <$584  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3011,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3029,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3128,7 +3160,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3147,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3246,7 +3278,7 @@
        "$645-675                                     54  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3275,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3456,7 @@
        "Griffin High School                       $585-629  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3441,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3459,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -3543,7 +3575,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3562,7 +3594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3644,7 +3676,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3673,7 +3705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3691,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3763,7 +3795,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3782,7 +3814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3854,7 +3886,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
